fix: fixes a hidden visibility issue

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ form {
 
 /* ITEMS SECTION*/
 
-#items-view {
+.items-view {
   background-color: #bbe4e9;
   padding: 20px;
   border: 5px solid #ccc;
@@ -209,7 +209,7 @@ form {
   padding: 20px;
   text-align: center;
   border-radius: 20px;
-}
+} 
 
 /* HIDDEN ELEMENTS */
 
